# simuci-module

./: CHANGELOG.md  README.es.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: architecture.es.md  architecture.md  index.md
src/simuci/: __init__.py  envcheck.py
src/simuci/analysis/: __init__.py  stats.py
src/simuci/core/: __init__.py  distributions.py  experiment.py  simulation.py
src/simuci/internals/: __init__.py  _constants.py  _types.py
src/simuci/io/: __init__.py  process_data.py
src/simuci/io/loaders/: __init__.py  base.py  csv_loader.py
src/simuci/tooling/: __init__.py  envcheck.py
src/simuci/validation/: __init__.py  schemas.py  validators.py
tests/: conftest.py  test_constants.py  test_distribuciones.py  test_envcheck.py  test_experiment.py  test_loaders.py  test_real_data.py  test_schemas.py  test_simulacion.py  test_stats.py  test_validators.py
